--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h1 {
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .nav li a{
-    visibility: hidden;
+    overflow: hidden;
     background-color: #fe2f5c;
   }
   * {
