--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ h1 {
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .nav li a{
     overflow: hidden;
+display:none;
     background-color: #fe2f5c;
   }
   * {
@@ -96,7 +97,6 @@ h1 {
     box-sizing: border-box;
   }
   body {
-width:320px;
     padding: 20px;
     margin: 0;
 overflow: hidden;
